# lab-flask-restplus-swagger

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  Vagrantfile  dot-env-example  manifest.yml  pyproject.toml  requirements.txt  run.py  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
app/: __init__.py  models.py  service.py
service/: __init__.py  config.py  models.py  routes.py  service.py
service/common/: error_handlers.py
service/static/: index.html
service/templates/: index.html
service/utils/: __init__.py  error_handlers.py  log_handlers.py
tests/: factories.py  test_cli_commands.py  test_models.py  test_pets.py  test_routes.py  test_service.py
